--- a/web/encounterRecord/Create.xhtml
+++ b/web/encounterRecord/Create.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="エンカウンターの作成"></h:outputText>
+            <h:outputText value="『#{campaignMasterController.selected.campaignName}/#{scenarioRecordController.selected.name}』の新規エンカウンターの作成"></h:outputText>
         </ui:define>
        <ui:define name="body">
             <h:form>          
