--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -51,8 +51,9 @@
                                 <h:commandLink action="/characterSheet/CharacterListPage" id="charaListLink" styleClass="leftpaneltext" value="キャラクター"/>                        
                             </h:panelGrid>                     
                             <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                                <h:commandLink action="/campaignMaster/List" styleClass="leftpaneltext" value="キャンペーン"/>
+                                <h:commandLink action="#{campaignMasterController.prepareList()}" styleClass="leftpaneltext" value="キャンペーン"/>
                                 <h:commandLink rendered="#{sessionController.isCampaignSelected()}" action="#{scenarioRecordController.prepareList()}" styleClass="leftpaneltextScenaio" value="シナリオ"/>
+                                <h:commandLink rendered="#{sessionController.isScenarioSelected()}" action="#{encounterRecordController.prepareList()}" styleClass="leftpaneltextEncounter" value="エンカウンター"/>                                
                             </h:panelGrid>                                 
                             <h:outputLabel value=""/>
                             <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
