--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -16,8 +16,8 @@
                     <h:panelGrid columns="2" id="campFilterGridPanel" style="width: 100%; height: 100%;">
                         <h:panelGrid columns="2">
                             <h:outputLabel value="キャンペーン"/>
-                            <h:selectOneMenu id="dropdown1" onchange="submit()" style="width: 240px" value="#{characterSheetController.selectedCampaignId}" >
-                                <f:selectItems id="dropdown1SelectItems" value="#{applicationController.campaignArray}"/>
+                            <h:selectOneMenu id="dropdown1" onchange="submit()" valueChangeListener="#{characterSheetPerLevelController.campaign_processValueChange(vce)}" style="width: 240px" value="#{characterSheetController.selectedCampaign}" >
+                                <f:selectItems id="dropdown1SelectItems" value="#{campaignMasterController.itemsAvailableSelectOne}"/>
                             </h:selectOneMenu>
                         </h:panelGrid>                            
                         <h:panelGrid style="width: 100%; text-align: right">
