Mod: Modified comments and import line

--- a/web/characterSheet/PrintableCharacterSummaryListPage.xhtml
+++ b/web/characterSheet/PrintableCharacterSummaryListPage.xhtml
@@ -29,7 +29,7 @@
                         </h:column>
                         <h:column id="attack_column">
                             <h:panelGrid id="gridPanel1" styleClass="qPrint">
-                                <h:outputText escape="false" id="outputText2" value="#{currentRow.attackDescriptionWithBR}"/>
+                                <h:outputText escape="false" id="outputText2" value="#{currentRow.attackDescription}"/>
                             </h:panelGrid>
                             <f:facet name="header"/>
                             <f:facet name="header"/>
