--- a/web/encounterRecord/Battle.xhtml
+++ b/web/encounterRecord/Battle.xhtml
@@ -11,26 +11,22 @@
         </ui:define>
         <ui:define name="body">
             <h:form>               
-                <h:panelGrid columns="3">
-                    <h:outputLabel value="エンカウンター名: " for="name" />
-                    <h:inputText id="name" value="#{encounterRecordController.selected.name}" title="#{bundle.EditEncounterRecordTitle_name}" />
-                    <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="保存" styleClass="smallBold"/>                      
-                </h:panelGrid>                <!--
-                <h:outputText value="#{bundle.ViewEncounterRecordLabel_round}" style="font-size: 20px"/>
-                <h:outputText value="#{encounterRecordController.selected.round}" title="#{bundle.ViewEncounterRecordTitle_round}" style="font-size: 20px"/>
+                <!--
+                   <h:outputText value="#{bundle.ViewEncounterRecordLabel_round}" style="font-size: 20px"/>
+                   <h:outputText value="#{encounterRecordController.selected.round}" title="#{bundle.ViewEncounterRecordTitle_round}" style="font-size: 20px"/>
                 -->
                 <h:outputText value="#{encounterRecordController.selected.comments}" />
 
                 <h:outputText escape="false" style="font-weight: bold" value="エンカウンターメンバーがいません" rendered="#{encounterMemberController.encounterMemberList.size() == 0}"/>
 
-                <h:panelGroup rendered="#{encounterMemberController.encounterMemberList.size() > 0}">                
-                    <h:commandButton action="#{encounterMemberController.nextTurn()}" value="次のターン" styleClass="smallBold" />
-                    <h:outputLabel value=" "/>                
-                    <h:commandButton action="#{encounterMemberController.previousTurn()}" value="前のターン"/>                                
-                    <h:outputLabel value=" "/>
+                <h:panelGroup rendered="#{encounterMemberController.encounterMemberList.size() > 0}">  
 
-                    <h:panelGrid columns="3">
-                        <h:commandLink value="ラウンドの最初へ" action="#{encounterMemberController.resetRound}"/>
+                    <h:panelGrid columns="7">
+                        <h:commandButton action="#{encounterMemberController.nextTurn()}" value="次のターン" styleClass="smallBold" />
+                        <h:outputLabel value=" "/>                
+                        <h:commandButton action="#{encounterMemberController.previousTurn()}" value="前のターン"/>                                
+                        <h:outputLabel value=" "/>
+                        <h:commandLink value="ラウンドの最初に戻る" action="#{encounterMemberController.resetRound}"/>
                         <h:outputLabel value="  "/>                     
                         <h:commandLink value="戦闘の最初に戻る" action="#{encounterMemberController.resetBattle}"/>                    
                     </h:panelGrid>                
@@ -118,20 +114,23 @@
                         </h:dataTable>
                     </h:panelGrid>                        
 
-                    <h:panelGrid columns="2">
+                    <h:panelGrid columns="5">
                         <h:commandButton value="イニシアチブランダム入力" action="#{encounterMemberController.setInitiativeByRandom}"/>                                        
                         <h:commandButton value="HPをリセット" action="#{encounterMemberController.setInitialHitPoint()}"/>                                                            
-                    </h:panelGrid>
+
+                        <h:commandLink value="モンスターを追加" action="#{monsterSelectionController.prepareList}" styleClass="smallBold" immediate="true"/>                
+                        <h:outputLabel value="   "/> 
+                        <h:commandLink value="プレイヤーキャラクターを読み込み" action="#{encounterRecordController.reloadPlayerCharacter()}" styleClass="smallBold"/>                                                                                                                                
+                    </h:panelGrid>                
                 </h:panelGroup>
 
+                <hr/>
+
                 <h:panelGrid columns="3">
-
-
-                    <h:commandLink value="モンスターを追加" action="#{monsterSelectionController.prepareList}" styleClass="smallBold" immediate="true"/>                
-                    <h:outputLabel value="   "/> 
-                    <h:commandLink value="プレイヤーキャラクターを読み込み" action="#{encounterRecordController.reloadPlayerCharacter()}" styleClass="smallBold"/>                                                                                                                                
-                </h:panelGrid>                
-
+                    <h:outputLabel value="エンカウンター名の変更: " for="name" />
+                    <h:inputText id="name" value="#{encounterRecordController.selected.name}" title="#{bundle.EditEncounterRecordTitle_name}" />
+                    <h:commandButton action="#{encounterMemberController.saveEncounterMembers()}" value="保存" styleClass="smallBold"/>                      
+                </h:panelGrid>                   
                 <h:panelGrid columns="2"> 
                     <h:outputLabel value="メモ " for="description" />
                     <h:inputTextarea id="comments" styleClass="middleTextArea" value="#{encounterRecordController.selected.comments}" />
