Fix: Senario list is not filtered by Campaign. This happend because current 'selected campaign' is stored within SessionController and CampaingMaster itself. So I made to stopre current campaing to SessionController

--- a/web/campaignMaster/Edit.xhtml
+++ b/web/campaignMaster/Edit.xhtml
@@ -8,7 +8,7 @@
     <ui:composition template="/campaignMaster/EditTemplate.xhtml">
 
         <ui:define name="title">
-            <h:outputText value="キャンペーン『#{campaignMasterController.selected.campaignName}』の編集"></h:outputText>
+            <h:outputText value="キャンペーン『#{campaignMasterController.selectedCampaign.campaignName}』の編集"></h:outputText>
         </ui:define>
 
         <ui:define name="controlTop">
