--- a/web/encounterRecord/Edit.xhtml
+++ b/web/encounterRecord/Edit.xhtml
@@ -10,7 +10,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="『#{campaignMasterController.selected.campaignName}/#{scenarioRecordController.selected.name}』のエンカウンター『#{encounterRecordController.selected.name}』の編集"></h:outputText>
+            <h:outputText value="『#{campaignMasterController.selectedCampaign.campaignName}/#{scenarioRecordController.selected.name}』のエンカウンター『#{encounterRecordController.selected.name}』の編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>            
