--- a/web/encounterRecord/Battle.xhtml
+++ b/web/encounterRecord/Battle.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="『#{campaignMasterController.selected.campaignName}/#{scenarioRecordController.selected.name}』のエンカウンター『#{encounterRecordController.selected.name}』 - ラウンド: #{encounterRecordController.selected.round}"></h:outputText>
+            <h:outputText value="『#{campaignMasterController.selectedCampaign.campaignName}/#{scenarioRecordController.selected.name}』のエンカウンター『#{encounterRecordController.selected.name}』 - ラウンド: #{encounterRecordController.selected.round}"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>               
