--- a/web/scenarioRecord/Edit.xhtml
+++ b/web/scenarioRecord/Edit.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="『#{campaignMasterController.selected.campaignName}』のシナリオ『#{scenarioRecordController.selected.name}』の編集"></h:outputText>
+            <h:outputText value="『#{campaignMasterController.selectedCampaign.campaignName}』のシナリオ『#{scenarioRecordController.selected.name}』の編集"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
