--- a/web/scenarioRecord/List.xhtml
+++ b/web/scenarioRecord/List.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="『#{campaignMasterController.selected.campaignName}』のシナリオ一覧"></h:outputText>
+            <h:outputText value="『#{campaignMasterController.selectedCampaign.campaignName}』のシナリオ一覧"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form styleClass="jsfcrud_list_form">
