--- a/web/scenarioRecord/Create.xhtml
+++ b/web/scenarioRecord/Create.xhtml
@@ -5,43 +5,18 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/scenarioRecord/EditTemplate.xhtml">
         <ui:define name="title">
-            <h:outputText value="新規シナリオの作成"></h:outputText>
+            <h:outputText value="『#{campaignMasterController.selectedCampaign.campaignName}』の新規シナリオの作成"></h:outputText>
         </ui:define>
-        <ui:define name="body">
-            <h:form>
+        
+        <ui:define name="header">
                 <h:panelGrid style="width: 100%" columns="2">
                     <h:commandButton action="#{scenarioRecordController.create}" value="作成"/>                
                     <h:panelGrid style="text-align: right; width: 100%" >
                         <h:commandButton action="/scenarioRecord/List" value="キャンセル"/>                                        
                     </h:panelGrid>
                 </h:panelGrid>                
-                
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="キャンペーン" for="campaign" />
-                    <h:outputLabel value="シナリオ名" for="name" />
-                    <h:inputText id="name" value="#{scenarioRecordController.selected.name}" title="#{bundle.EditScenarioRecordTitle_name}" />
-                    <h:outputLabel value="備考" for="description" />
-                    <h:inputTextarea id="description" styleClass="middleTextArea" value="#{scenarioRecordController.selected.description}" />
-
-                </h:panelGrid>
-                <br />
-            </h:form>
-
-            <hr/>
-
-            <br/>
-            <h:form>
-                <br/>
-                <h:outputLabel styleClass="smallBold">新しいエンカウンターの追加</h:outputLabel>
-                <h:panelGrid columns="3">
-                    <h:outputLabel value="名前" for="name" />
-                    <h:inputText id="name" style="width: 200px;" value="#{encounterRecordController.selected.name}" />
-                    <h:commandButton action="#{encounterRecordController.create}" value="作成" />                    
-                </h:panelGrid>
-            </h:form>
-
         </ui:define>
     </ui:composition>
 
