--- a/web/scenarioRecord/Edit.xhtml
+++ b/web/scenarioRecord/Edit.xhtml
@@ -5,35 +5,26 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/scenarioRecord/EditTemplate.xhtml">
         <ui:define name="title">
             <h:outputText value="『#{campaignMasterController.selectedCampaign.campaignName}』のシナリオ『#{scenarioRecordController.selected.name}』の編集"></h:outputText>
         </ui:define>
-        <ui:define name="body">
-            <h:form>
+        <ui:define name="header">
                 <h:panelGrid style="width: 100%" columns="2">
                     <h:commandButton action="#{scenarioRecordController.update}" value="保存"/>
                     <h:panelGrid style="text-align: right; width: 100%" >
                         <h:commandButton action="#{scenarioRecordController.cancel}" value="キャンセル"/>
                     </h:panelGrid>
-                </h:panelGrid>   
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="キャンペーン" for="campaign" />
-                    <h:selectOneMenu id="campaign" value="#{scenarioRecordController.selected.campaign}" title="#{bundle.EditScenarioRecordTitle_campaign}" >
-                        <f:selectItems value="#{campaignMasterController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                    <h:outputLabel value="シナリオ名" for="name" />
-                    <h:inputText id="name" value="#{scenarioRecordController.selected.name}" title="#{bundle.EditScenarioRecordTitle_name}" />
-                    <h:outputLabel value="備考" for="description" />
-                    <h:inputTextarea id="description" styleClass="middleTextArea" value="#{scenarioRecordController.selected.description}" />
-
-                </h:panelGrid>
+                </h:panelGrid> 
+        </ui:define>
+        <ui:define name="footer">
+            <h:panelGrid columns="2" width="100%">
                 <h:commandLink action="#{encounterRecordController.prepareList()}" value="エンカウンター一覧へ"/>  
                 <h:panelGrid id="deletePanel1" style="height: 100%; text-align: right; width: 100%">
                     <h:commandButton action="#{scenarioRecordController.destroy()}" 
                                      style="color: rgb(255, 51, 51)" onclick="return confirm('削除しますか?')" value="シナリオの削除"/>
-                </h:panelGrid>                            
-            </h:form>
+                </h:panelGrid>       
+            </h:panelGrid>
         </ui:define>
     </ui:composition>
 
