Fix: misspelled clark -> cloak

--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -94,7 +94,7 @@
                         </h:dataTable>
                     </h:panelGrid>
                     <h:panelGrid columns="3" id="gridPanel1" style="height: 100%; width: 100%">
-                        <h:commandLink action="#{characterSheetController.listSummaryButton_action}" target="blank" id="listSummaryButton">
+                        <h:commandLink action="#{characterSheetController.listSummaryButton_action}" target="_blank" id="listSummaryButton">
                             <h:outputText style="size: 10px" value="選択したキャラを一覧表示" />                                
                         </h:commandLink> 
                         <h:commandButton action="#{characterSheetController.selectAllButton_action}" id="selectAllButton" value="全て選択"/>
