--- a/web/characterSheet/PrintableCharacterSummaryListPage.xhtml
+++ b/web/characterSheet/PrintableCharacterSummaryListPage.xhtml
@@ -50,7 +50,7 @@
                                 <h:outputText rendered="#{!currentRow.characterEquipment.armor.isEmpty()}" escape="false" value="鎧: #{currentRow.characterEquipment.armor}"/>  
                                 <h:outputText rendered="#{!currentRow.characterEquipment.robe.isEmpty()}" escape="false" value="ローブ: #{currentRow.characterEquipment.robe}"/>
                                 <h:outputText rendered="#{!currentRow.characterEquipment.vest.isEmpty()}" escape="false" value="ベスト: #{currentRow.characterEquipment.vest}"/>
-                                <h:outputText rendered="#{!currentRow.characterEquipment.cloak.isEmpty()}" escape="false" value="マント: #{currentRow.characterEquipment.clark}"/>
+                                <h:outputText rendered="#{!currentRow.characterEquipment.cloak.isEmpty()}" escape="false" value="マント: #{currentRow.characterEquipment.cloak}"/>
                                 <h:outputText rendered="#{!currentRow.characterEquipment.shield.isEmpty()}" escape="false" value="盾: #{currentRow.characterEquipment.shield}"/>                                                                
                             </h:panelGrid>
                             <f:facet name="header"/>
