--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -95,10 +95,10 @@
                     </h:panelGrid>
                     <h:panelGrid columns="4" id="gridPanel1" style="height: 100%; width: 100%">
                         <h:commandLink action="#{encounterToolController.listSummaryButton_action}" target="blank" >
-                            <h:outputText style="size: 10px" value="選択したキャラでエンカウンター" />                                                            
+                            <h:outputText style="size: 10px" value="選択したキャラを一覧表示" />                                                            
                         </h:commandLink> 
                         <h:commandLink action="#{characterSheetController.listSummaryButton_action}" target="blank">
-                            <h:outputText style="size: 10px" value="選択したキャラを一覧表示" />                                
+                            <h:outputText style="size: 10px" value="エンカウンター(未実装)" />                                                            
                         </h:commandLink> 
                         <h:commandButton action="#{characterSheetController.selectAllButton_action}" id="selectAllButton" value="全て選択"/>
                         <h:commandButton action="#{characterSheetController.releaseAllButton_action}" id="releaseAllButton" value="全て解除"/>
